Allow any string id on matcher

--- a/force-app/main/default/classes/util/ContactEmailMatcher.cls
+++ b/force-app/main/default/classes/util/ContactEmailMatcher.cls
@@ -1,18 +1,18 @@
 global with sharing class ContactEmailMatcher {
 
-    private Map<Id, List<String>> emailMap;
+    private Map<String, List<String>> emailMap;
     private List<String> extraEmailFields;
-    global ContactEmailMatcher(Map<Id, List<String>> emailMap) {
+    global ContactEmailMatcher(Map<String, List<String>> emailMap) {
         this(emailMap, new List<String>());
     }
-    global ContactEmailMatcher(Map<Id, List<String>> emailMap, List<String> extraEmailFields) {
+    global ContactEmailMatcher(Map<String, List<String>> emailMap, List<String> extraEmailFields) {
         this.emailMap = emailMap;
         this.extraEmailFields = extraEmailFields;
     }
 
-    global Map<Id, Id> match() {
-        Map<String, Id> reverseMap = new Map<String, Id>();
-        for(Id id : emailMap.keySet()) {
+    global Map<String, Id> match() {
+        Map<String, String> reverseMap = new Map<String, String>();
+        for(String id : emailMap.keySet()) {
             for(String email : emailMap.get(id)) {
                 reverseMap.put(email.toLowerCase(), id);
             }
@@ -24,9 +24,9 @@ global with sharing class ContactEmailMatcher {
             extraWhere += ' OR '+field+' IN :emails';
         }
 
-        Map<Id, Id> resultMap = new Map<Id, Id>();
+        Map<String, Id> resultMap = new Map<String, Id>();
         for(Contact c : (List<Contact>)Database.queryWithBinds('SELECT Id'+extraFields+' FROM Contact WHERE '+extraWhere, new Map<String, Object>{'emails' => reverseMap.keySet()}, AccessLevel.USER_MODE)) {
-            Id passed = reverseMap.get(c.Email.toLowerCase());
+            String passed = reverseMap.get(c.Email.toLowerCase());
             for(String field : extraEmailFields) {
                 if(passed != null) break;
 
