Added Queryable field list on matchers

--- a/force-app/main/default/classes/util/ContactEmailMatcher.cls
+++ b/force-app/main/default/classes/util/ContactEmailMatcher.cls
@@ -2,12 +2,17 @@ global with sharing class ContactEmailMatcher {
 
     private Map<String, List<String>> emailMap;
     private List<String> extraEmailFields;
+    private List<String> extraQueryFields;
     global ContactEmailMatcher(Map<String, List<String>> emailMap) {
         this(emailMap, new List<String>());
     }
     global ContactEmailMatcher(Map<String, List<String>> emailMap, List<String> extraEmailFields) {
+        this(emailMap, extraEmailFields, new List<String>());
+    }
+    global ContactEmailMatcher(Map<String, List<String>> emailMap, List<String> extraEmailFields, List<String> extraQueryFields) {
         this.emailMap = emailMap;
         this.extraEmailFields = extraEmailFields;
+        this.extraQueryFields = extraQueryFields;
     }
 
     global Map<String, Id> match() {
@@ -23,7 +28,9 @@ global with sharing class ContactEmailMatcher {
             extraFields += ', '+field;
             extraWhere += ' OR '+field+' IN :emails';
         }
-
+        for(String field : extraQueryFields) {
+            extraFields += ', '+field;
+        }
         Map<String, Id> resultMap = new Map<String, Id>();
         for(Contact c : (List<Contact>)Database.queryWithBinds('SELECT Id'+extraFields+' FROM Contact WHERE '+extraWhere, new Map<String, Object>{'emails' => reverseMap.keySet()}, AccessLevel.USER_MODE)) {
             String passed = reverseMap.get(c.Email.toLowerCase());
