--- a/force-app/main/default/classes/CombinedFunctions_TEST.cls
+++ b/force-app/main/default/classes/CombinedFunctions_TEST.cls
@@ -377,7 +377,7 @@ private class CombinedFunctions_TEST {
         matcher = new ContactEmailMatcher(new Map<String, List<String>>{ 'a2WQm0000012liDMAQ' => new List<String>{ 'AltEmail@123.com' }}, new List<String>{ 'hed__AlternateEmail__c' });
         matcher.match();
 
-        matcher = new ContactEmailMatcher(new Map<String, List<String>> { 'a2WQm0000012liDMAQ' => new List<String>{ 'altemail2@123.com' }}, new List<String>{'hed__AlternateEmail__c', 'hed__UniversityEmail__c'});
+        matcher = new ContactEmailMatcher(new Map<String, List<String>> { 'a2WQm0000012liDMAQ' => new List<String>{ 'altemail2@123.com' }}, new List<String>{'hed__AlternateEmail__c', 'hed__UniversityEmail__c'}, new List<String>{'Name'});
         results = matcher.match();
 
         System.assertEquals(1, results.size(), 'Incorrect result size on university email.');
@@ -410,7 +410,7 @@ private class CombinedFunctions_TEST {
             // No extra emails on Lead right now
         }
 
-        matcher = new LeadEmailMatcher(new Map<String, List<String>> { 'a2WQm0000012liDMAQ' => new List<String>{ '+123456789' }}, new List<String>{'Phone'});
+        matcher = new LeadEmailMatcher(new Map<String, List<String>> { 'a2WQm0000012liDMAQ' => new List<String>{ '+123456789' }}, new List<String>{'Phone'}, new List<String>{'Name'});
         results = matcher.match();
 
         System.assertEquals(1, results.size(), 'Incorrect result size on phone.');
