--- a/force-app/main/default/classes/util/ContactEmailMatcher.cls
+++ b/force-app/main/default/classes/util/ContactEmailMatcher.cls
@@ -15,7 +15,7 @@ global with sharing class ContactEmailMatcher {
         this.extraQueryFields = extraQueryFields;
     }
 
-    global Map<String, Id> match() {
+    global Map<String, Contact> match() {
         Map<String, String> reverseMap = new Map<String, String>();
         for(String id : emailMap.keySet()) {
             for(String email : emailMap.get(id)) {
@@ -31,7 +31,7 @@ global with sharing class ContactEmailMatcher {
         for(String field : extraQueryFields) {
             extraFields += ', '+field;
         }
-        Map<String, Id> resultMap = new Map<String, Id>();
+        Map<String, Contact> resultMap = new Map<String, Contact>();
         for(Contact c : (List<Contact>)Database.queryWithBinds('SELECT Id'+extraFields+' FROM Contact WHERE '+extraWhere, new Map<String, Object>{'emails' => reverseMap.keySet()}, AccessLevel.USER_MODE)) {
             String passed = reverseMap.get(c.Email.toLowerCase());
             for(String field : extraEmailFields) {
@@ -40,7 +40,7 @@ global with sharing class ContactEmailMatcher {
                 passed = reverseMap.get(((String)c.get(field)).toLowerCase());
             }
             if(passed != null) {
-                resultMap.put(passed, c.Id);
+                resultMap.put(passed, c);
             }
         }
         return resultMap;
