--- a/force-app/main/default/classes/util/LeadEmailMatcher.cls
+++ b/force-app/main/default/classes/util/LeadEmailMatcher.cls
@@ -15,7 +15,7 @@ global with sharing class LeadEmailMatcher {
         this.extraQueryFields = extraQueryFields;
     }
 
-    global Map<String, Id> match() {
+    global Map<String, Lead> match() {
         Map<String, String> reverseMap = new Map<String, String>();
         for(String id : emailMap.keySet()) {
             for(String email : emailMap.get(id)) {
@@ -32,7 +32,7 @@ global with sharing class LeadEmailMatcher {
             extraFields += ', '+field;
         }
 
-        Map<String, Id> resultMap = new Map<String, Id>();
+        Map<String, Lead> resultMap = new Map<String, Lead>();
         for(Lead l : (List<Lead>)Database.queryWithBinds('SELECT Id'+extraFields+' FROM Lead WHERE '+extraWhere, new Map<String, Object>{'emails' => reverseMap.keySet()}, AccessLevel.USER_MODE)) {
             String passed = reverseMap.get(l.Email.toLowerCase());
             for(String field : extraEmailFields) {
@@ -41,7 +41,7 @@ global with sharing class LeadEmailMatcher {
                 passed = reverseMap.get(((String)l.get(field)).toLowerCase());
             }
             if(passed != null) {
-                resultMap.put(passed, l.Id);
+                resultMap.put(passed, l);
             }
         }
         return resultMap;
