--- a/force-app/main/default/classes/util/LeadEmailMatcher.cls
+++ b/force-app/main/default/classes/util/LeadEmailMatcher.cls
@@ -8,11 +8,7 @@ global with sharing class LeadEmailMatcher extends ObjectStringMatcher {
     }
     
     global LeadEmailMatcher(Map<String, List<String>> emailMap, List<String> extraEmailFields, List<String> extraQueryFields) {
-        super(Lead.getSObjectType(), emailMap, (List<String>)CombinedFunctions.addItemToList(extraEmailFields, 'Email', true), extraQueryFields);
-    }
-
-    global Map<String, Lead> match() {
-        return (Map<String, Lead>)runmatch();
+        super(Lead.getSObjectType(), emailMap, CombinedFunctions.addStringToList(extraEmailFields, 'Email', true), extraQueryFields);
     }
 
 }
