stubbed out method

--- a/force-app/main/default/classes/BaseTestUtil.cls
+++ b/force-app/main/default/classes/BaseTestUtil.cls
@@ -38,5 +38,9 @@ global with sharing class BaseTestUtil {
             return res;
           }
     }
+
+    global void AssertRestResponse() {
+        
+    }
     
 }
