change returned ns to not depend on csuoee

--- a/force-app/main/default/classes/util/OrgUtils.cls
+++ b/force-app/main/default/classes/util/OrgUtils.cls
@@ -4,7 +4,7 @@ global without sharing class OrgUtils {
     global static String getOrgNs() {
         if(orgNs == null) {
             orgNs = ([SELECT NamespacePrefix FROM Organization].NamespacePrefix);
-            if(orgNs == 'csuoee') {
+            if(orgNs != '') {
                 orgNs = orgNs + '__';
             }
         }
