Pulled out HttpRequest generator for middleware callouts

--- a/force-app/main/default/classes/MiddlewareIntegration.cls
+++ b/force-app/main/default/classes/MiddlewareIntegration.cls
@@ -1,12 +1,16 @@
 global with sharing class MiddlewareIntegration {
+
+    global static HttpRequest getMiddlewareRequest(String method, String path) {
+        HttpRequest request = new HttpRequest();
+        request.setEndpoint('callout:oeesvc__MiddlewareSvc'+path);
+        request.setMethod(method);
+        request.setHeader('Accept', 'application/json');
+        request.setHeader('Content-Type', 'application/json');
+    }
     
     private static Http http = new Http();
     private static MiddlewareActionResponse sendDataRequest(String path) {
-        HttpRequest request = new HttpRequest();
-        request.setEndpoint('callout:oeesvc__MiddlewareSvc'+path);
-        request.setMethod('GET');
-        request.setHeader('Accept', 'application/json');
-        request.setHeader('Content-Type', 'application/json');
+        HttpRequest request = getMiddlewareRequest('GET', path);
         
         HttpResponse response = http.send(request);
         MiddlewareActionResponse actionResponse;
@@ -21,11 +25,7 @@ global with sharing class MiddlewareIntegration {
     }
 
     global static MiddlewareActionResponse sendPostRequest(String path, Map<String, String> body) {
-        HttpRequest request = new HttpRequest();
-        request.setEndpoint('callout:oeesvc__MiddlewareSvc'+path);
-        request.setMethod('POST');
-        request.setHeader('Accept', 'application/json');
-        request.setHeader('Content-Type', 'application/json');
+        HttpRequest request = getMiddlewareRequest('POST', path);
 
         request.setBody(JSON.serialize(body));
         
