--- a/force-app/main/default/classes/middleware/RegistrationValidation.cls
+++ b/force-app/main/default/classes/middleware/RegistrationValidation.cls
@@ -5,27 +5,27 @@ global with sharing class RegistrationValidation {
      */
     @AuraEnabled
     public static csuoee__Registration__c validateRegistration(csuoee__Registration__c reg) {
-        String path = '/salesforce/action/registration/'+Integer.format(reg.csuoee__Registration_Id__c)+'/validate';
+        String path = '/salesforce/action/registration/'+((Integer)reg.csuoee__Registration_Id__c)+'/validate';
         HttpResponse response = MiddlewareIntegration.sendMiddlewareRequest('GET', path);
         try {
             return(csuoee__Registration__c)JSON.deserialize(response.getBody(), SObject.class);
-         } catch(Exception e) {
-             return null;
-         }
+        } catch(Exception e) {
+            throw new AuraException('Unknown error from middleware. Please check logs.');
+        }
     }
     
     /**
      * /salesforce/action/registration/{regId}/enrollments
      */
     @AuraEnabled
-    public static hed__Course_Enrollment__c validateEnrollments(csuoee__Registration__c reg) {
-        String path = '/salesforce/action/registration/'+Integer.format(reg.csuoee__Registration_Id__c)+'/enrollments';
+    public static List<hed__Course_Enrollment__c> validateEnrollments(csuoee__Registration__c reg) {
+        String path = '/salesforce/action/registration/'+((Integer)reg.csuoee__Registration_Id__c)+'/enrollments';
         HttpResponse response = MiddlewareIntegration.sendMiddlewareRequest('GET', path);
         try {
-            return(hed__Course_Enrollment__c)JSON.deserialize(response.getBody(), List<SObject>.class);
-         } catch(Exception e) {
-             return null;
-         }
+            return(List<hed__Course_Enrollment__c>)JSON.deserialize(response.getBody(), List<SObject>.class);
+        } catch(Exception e) {
+            throw new AuraException('Unknown error from middleware. Please check logs.');
+        }
     }
 
 }
