Validation test coverage

--- a/force-app/main/default/classes/MiddlewareIntegration_TEST.cls
+++ b/force-app/main/default/classes/MiddlewareIntegration_TEST.cls
@@ -109,12 +109,68 @@ global class MiddlewareIntegration_TEST {
     }
     
     @IsTest
+    private static void validateRegistrationFail() {
+        Test.startTest();
+        Test.setMock(HttpCalloutMock.class, BaseTestUtil.getBasicMiddlewareMock(''));
+
+        try {
+            csuoee__Registration__c result = RegistrationValidation.validateRegistration(new csuoee__Registration__c(csuoee__Registration_Id__c = 1));
+            System.assert(false, 'This should have errored.');
+        } catch(AuraException ae) {
+
+        }
+
+        Test.stopTest();
+    }
+    
+    @IsTest
+    private static void validateLineItems() {
+        Test.startTest();
+        Test.setMock(HttpCalloutMock.class, BaseTestUtil.getBasicMiddlewareMock('[{"attributes": {"type": "csuoee__Registration_Line_Item__c"}, "csuoee__Course_Offering__c": "a05VA0000089pM6YAI", "csuoee__Registration__r": {"csuoee__Registration_Id__c": 1}}, {"attributes": {"type": "csuoee__Registration_Line_Item__c"}, "csuoee__Course_Offering__c": "a05VA0000089pM6YAI", "csuoee__Registration__r": {"csuoee__Registration_Id__c": 1}}]'));
+
+        List<csuoee__Registration_Line_Item__c> results = RegistrationValidation.validateLineItems(new csuoee__Registration__c(csuoee__Registration_Id__c = 1));
+        System.assert(results.size() == 2);
+
+        Test.stopTest();
+    }
+    
+    @IsTest
+    private static void validateLineItemsFail() {
+        Test.startTest();
+        Test.setMock(HttpCalloutMock.class, BaseTestUtil.getBasicMiddlewareMock(''));
+
+        try {
+            List<csuoee__Registration_Line_Item__c> results = RegistrationValidation.validateLineItems(new csuoee__Registration__c(csuoee__Registration_Id__c = 1));
+            System.assert(false, 'This should have errored.');
+        } catch(AuraException ae) {
+
+        }
+
+        Test.stopTest();
+    }
+    
+    @IsTest
     private static void validateEnrollments() {
         Test.startTest();
         Test.setMock(HttpCalloutMock.class, BaseTestUtil.getBasicMiddlewareMock('[{"attributes": {"type": "hed__Course_Enrollment__c"}, "hed__Contact__c": "a05VA0000089pM6YAI", "hed__Course_Offering__c": "a05VA0000089pM6YAI"}, {"attributes": {"type": "hed__Course_Enrollment__c"}, "hed__Contact__c": "a05VA0000089pM6YAI", "hed__Course_Offering__c": "a05VA0000089pM6YAI"}]'));
 
         List<hed__Course_Enrollment__c> results = RegistrationValidation.validateEnrollments(new csuoee__Registration__c(csuoee__Registration_Id__c = 1));
         System.assert(results.size() == 2);
+
+        Test.stopTest();
+    }
+    
+    @IsTest
+    private static void validateEnrollmentsFail() {
+        Test.startTest();
+        Test.setMock(HttpCalloutMock.class, BaseTestUtil.getBasicMiddlewareMock(''));
+
+        try {
+            List<hed__Course_Enrollment__c> results = RegistrationValidation.validateEnrollments(new csuoee__Registration__c(csuoee__Registration_Id__c = 1));
+            System.assert(false, 'This should have errored.');
+        } catch(AuraException ae) {
+
+        }
 
         Test.stopTest();
     }
