Registration Querying via Aura or Flow

--- a/force-app/main/default/classes/middleware/RegistrationValidation.cls
+++ b/force-app/main/default/classes/middleware/RegistrationValidation.cls
@@ -1,4 +1,34 @@
 global with sharing class RegistrationValidation {
+
+    @InvocableMethod(Label='Query Registrations' Description = 'Given a term, query for registrations in Opus.' Category = 'Opus')
+    global static List<List<csuoee__Registration__c>> queryRegistrationsInvocable(List<hed__Term__c> terms) {
+        List<List<csuoee__Registration__c>> results = new List<List<csuoee__Registration__c>>();
+        for(hed__Term__c term : terms) {
+            results.add(queryRegistrations(term));
+        }
+        return results;
+    }
+
+    /**
+     * /salesforce/action/registration/query
+     */
+    @AuraEnabled
+    global static List<csuoee__Registration__c> queryRegistrations(hed__Term__c term) {
+        String path = '/salesforce/action/registration/query';
+        if(term.RecordType.DeveloperName == 'Noncredit') {
+            path = path + '?isCredit=false';
+        } else {
+            path = path + '?isCredit=true';
+        }
+        String termReference = term.lms_hed__LMS_Reference_Code__c.replace('-NCT', '');
+        path = path + '&term='+termReference;
+        HttpResponse response = MiddlewareIntegration.sendMiddlewareRequest('GET', path);
+        try {
+            return(List<csuoee__Registration__c>)JSON.deserialize(response.getBody(), List<SObject>.class);
+        } catch(Exception e) {
+            throw new AuraException('Unknown error from middleware. Please check logs.');
+        }
+    }
     
     /**
      * /salesforce/action/registration/{regId}/validate
